--- a/src/app/home/Gifpagecss.module.css
+++ b/src/app/home/Gifpagecss.module.css
@@ -8,6 +8,20 @@
     margin-bottom: 15%;
 }
 
+.video{
+    width: 100%;
+    height: 100%;
+    padding-bottom: 10%;
+}
+
+.video::after{
+    bottom: 0; /* Position at the bottom */
+  left: 0;
+  width: 100%; /* Cover the entire width */
+  height: 5%; /* Border height */
+  background-image: linear-gradient(to right, transparent, black); /* Linear gradient from transparent to black */
+}
+
 .button{
     z-index: 1;
     margin-top:-14%;
@@ -30,3 +44,9 @@
     font-weight: 700;
     line-height: normal;
 }
+
+@media (min-width: 768px) {
+    .video{
+        height: 50%; 
+    }
+  }
